[gd_scene load_steps=15 format=3 uid="uid://c6j6gwegxncpe"]

[ext_resource type="Script" path="res://MiniGames/TiraAll.gd" id="1_ivibp"]
[ext_resource type="Texture2D" uid="uid://hdp76rpp3fs1" path="res://Media/imatges/backgroundTirall/tirall.png" id="1_ms8ba"]
[ext_resource type="PackedScene" uid="uid://dil6vt7mp1o52" path="res://UI/maTirAll/maTirAll.tscn" id="2_jbjxk"]
[ext_resource type="PackedScene" uid="uid://bxwvom72yex22" path="res://UI/Hud.tscn" id="3_01ihy"]
[ext_resource type="PackedScene" uid="uid://bw7cptq3vhd4s" path="res://UI/allxoca/allxoca.tscn" id="4_wreud"]
[ext_resource type="FontFile" uid="uid://bgqt1vjshdk4n" path="res://Media/Fonts/zero_cool/ZeroCool.ttf" id="6_1qb7x"]
[ext_resource type="Texture2D" uid="uid://c5r8uihprhlxx" path="res://Media/imatges/squareAlls/abaixdreta.png" id="6_ufp3q"]
[ext_resource type="Texture2D" uid="uid://cot581o5xqtxp" path="res://Media/imatges/squareAlls/adaltdreta.png" id="7_3qpxu"]
[ext_resource type="Texture2D" uid="uid://dlw46ubgjy63l" path="res://Media/imatges/squareAlls/adaltesquerra.png" id="8_cem84"]
[ext_resource type="Texture2D" uid="uid://bxjl0fp7hin4b" path="res://Media/imatges/squareAlls/vertical.png" id="8_dbj4n"]
[ext_resource type="Texture2D" uid="uid://baia8sxp0simw" path="res://Media/imatges/squareAlls/abaixesquerra.png" id="9_virkr"]
[ext_resource type="Texture2D" uid="uid://bvy4sa43wc4p6" path="res://Media/imatges/squareAlls/background.png" id="10_k7joa"]
[ext_resource type="Texture2D" uid="uid://p4txl2j552ao" path="res://Media/imatges/squareAlls/horitzontal.png" id="11_ptwxq"]
[ext_resource type="PackedScene" uid="uid://rn04uhwsm28s" path="res://UI/RetryGame.tscn" id="14_f1j5r"]

[node name="TiraAll" type="Node2D"]
script = ExtResource("1_ivibp")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -2.0
offset_right = 320.0
offset_bottom = 238.0
texture = ExtResource("1_ms8ba")

[node name="Hud" parent="." instance=ExtResource("3_01ihy")]
visible = false

[node name="MaTirAll" parent="." instance=ExtResource("2_jbjxk")]
position = Vector2(300, 214)

[node name="Allxoca" parent="." instance=ExtResource("4_wreud")]
visible = false
position = Vector2(5, 2)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Abaixdreta" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(193, 40)
texture = ExtResource("6_ufp3q")

[node name="Adaltdreta" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(193, 13)
texture = ExtResource("7_3qpxu")

[node name="Vertical" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(151, 26)
texture = ExtResource("8_dbj4n")

[node name="Vertical2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(193, 24.5)
scale = Vector2(1, 0.681818)
texture = ExtResource("8_dbj4n")
flip_h = true

[node name="Adaltesquerra" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(151, 13)
texture = ExtResource("8_cem84")

[node name="Abaixesquerra" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(151, 40)
texture = ExtResource("9_virkr")

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(171, 20)
texture = ExtResource("10_k7joa")

[node name="Background2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(180, 21)
texture = ExtResource("10_k7joa")

[node name="Horitzontal" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(172, 13)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(173, 40)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 151.0
offset_top = 10.0
offset_right = 193.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 10
text = "Juga"

[node name="tornJugador" type="Label" parent="CanvasLayer"]
offset_left = 149.0
offset_top = 22.0
offset_right = 191.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 8
text = "Jugador 1"

[node name="timer" type="Label" parent="CanvasLayer"]
offset_left = 166.0
offset_top = 32.0
offset_right = 208.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 8
text = "33"

[node name="Player1Punts" type="CanvasLayer" parent="."]

[node name="Adaltesquerra2" type="Sprite2D" parent="Player1Punts"]
position = Vector2(13, 61)
texture = ExtResource("8_cem84")

[node name="Abaixesquerra2" type="Sprite2D" parent="Player1Punts"]
position = Vector2(13, 83)
texture = ExtResource("9_virkr")

[node name="Abaixdreta2" type="Sprite2D" parent="Player1Punts"]
position = Vector2(73, 83)
texture = ExtResource("6_ufp3q")

[node name="Adaltdreta2" type="Sprite2D" parent="Player1Punts"]
position = Vector2(73, 61)
texture = ExtResource("7_3qpxu")

[node name="Horitzontal3" type="Sprite2D" parent="Player1Punts"]
position = Vector2(35, 61)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal4" type="Sprite2D" parent="Player1Punts"]
position = Vector2(52, 61)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal5" type="Sprite2D" parent="Player1Punts"]
position = Vector2(34, 83)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Horitzontal6" type="Sprite2D" parent="Player1Punts"]
position = Vector2(51, 83)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Label" type="Label" parent="Player1Punts"]
offset_left = 19.0
offset_top = 59.0
offset_right = 71.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 10
text = "Jugador 1"

[node name="PuntsP1" type="Label" parent="Player1Punts"]
offset_left = 24.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 10

[node name="Player1Punts2" type="CanvasLayer" parent="."]

[node name="Adaltesquerra2" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(246, 61)
texture = ExtResource("8_cem84")

[node name="Abaixesquerra2" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(246, 83)
texture = ExtResource("9_virkr")

[node name="Abaixdreta2" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(306, 83)
texture = ExtResource("6_ufp3q")

[node name="Adaltdreta2" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(306, 61)
texture = ExtResource("7_3qpxu")

[node name="Horitzontal3" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(268, 61)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal4" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(285, 61)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal5" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(267, 83)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Horitzontal6" type="Sprite2D" parent="Player1Punts2"]
position = Vector2(284, 83)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Label2" type="Label" parent="Player1Punts2"]
offset_left = 252.0
offset_top = 58.0
offset_right = 304.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 10
text = "Jugador 2"

[node name="PuntsP2" type="Label" parent="Player1Punts2"]
offset_left = 256.0
offset_top = 71.0
offset_right = 296.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 10

[node name="Information" type="CanvasLayer" parent="."]

[node name="Horitzontal4" type="Sprite2D" parent="Information"]
position = Vector2(188, 113)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal3" type="Sprite2D" parent="Information"]
position = Vector2(166, 113)
texture = ExtResource("11_ptwxq")

[node name="Abaixdreta" type="Sprite2D" parent="Information"]
position = Vector2(210, 151)
texture = ExtResource("6_ufp3q")

[node name="Abaixesquerra" type="Sprite2D" parent="Information"]
position = Vector2(100, 151)
texture = ExtResource("9_virkr")

[node name="Adaltdreta" type="Sprite2D" parent="Information"]
position = Vector2(210, 113)
texture = ExtResource("7_3qpxu")

[node name="Adaltesquerra" type="Sprite2D" parent="Information"]
position = Vector2(100, 113)
texture = ExtResource("8_cem84")

[node name="Horitzontal" type="Sprite2D" parent="Information"]
position = Vector2(122, 113)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal" type="Sprite2D" parent="Information/Horitzontal"]
position = Vector2(22, 0)
texture = ExtResource("11_ptwxq")

[node name="Horitzontal2" type="Sprite2D" parent="Information"]
position = Vector2(122, 151)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Horitzontal2" type="Sprite2D" parent="Information/Horitzontal2"]
position = Vector2(22, 0)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Vertical" type="Sprite2D" parent="Information"]
position = Vector2(100, 129)
texture = ExtResource("8_dbj4n")

[node name="Vertical2" type="Sprite2D" parent="Information"]
position = Vector2(210, 133)
texture = ExtResource("8_dbj4n")
flip_h = true

[node name="Background" type="Sprite2D" parent="Information"]
position = Vector2(139, 133)
texture = ExtResource("10_k7joa")

[node name="Background3" type="Sprite2D" parent="Information/Background"]
position = Vector2(36, -1)
texture = ExtResource("10_k7joa")
offset = Vector2(6, -1)

[node name="Background" type="Sprite2D" parent="Information/Background"]
position = Vector2(21, -1)
texture = ExtResource("10_k7joa")

[node name="Background3" type="Sprite2D" parent="Information"]
position = Vector2(190, 131)
texture = ExtResource("10_k7joa")

[node name="Horitzontal5" type="Sprite2D" parent="Information"]
position = Vector2(165, 151)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Horitzontal3" type="Sprite2D" parent="Information/Horitzontal5"]
position = Vector2(25, 0)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Horitzontal6" type="Sprite2D" parent="Information/Horitzontal5"]
position = Vector2(22, 0)
texture = ExtResource("11_ptwxq")
flip_v = true

[node name="Background4" type="Sprite2D" parent="Information"]
position = Vector2(118, 131)
texture = ExtResource("10_k7joa")

[node name="Label" type="Label" parent="Information"]
offset_left = 100.0
offset_top = 113.0
offset_right = 207.0
offset_bottom = 149.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_1qb7x")
theme_override_font_sizes/font_size = 8
text = "Jugador 1 comences tens
25 segons per fer el maxim
de punts"

[node name="RetryGame" parent="." instance=ExtResource("14_f1j5r")]

[node name="TimerGotoRecords" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerGotoRecords" to="." method="_on_timer_goto_records_timeout"]
